# practice-book-rust-web-development

./: .gitignore  LICENSE  README.md  rustfmt.toml
ch01/minimal-warp/: Cargo.toml
ch01/minimal-warp/src/: main.rs
ch01/minimal_reqwest/: Cargo.toml
ch01/minimal_reqwest/src/: main.rs
ch02/questionnaire-cli/: Cargo.toml
ch02/questionnaire-cli/src/: main.rs
ch02/questionnaire-web/: Cargo.toml
ch02/questionnaire-web/src/: main.rs
ch03/questionnaire-web/: Cargo.toml
ch03/questionnaire-web/src/: main.rs
ch04/questionnaire-web/: Cargo.toml
ch04/questionnaire-web-02-answers/src/: main.rs
ch04/questionnaire-web-get/src/: main.rs
ch04/questionnaire-web-post-put-delete/src/: main.rs
ch05/questionnaire-web/: Cargo.toml  questions.json
ch05/questionnaire-web/src/: main.rs
ch05/questionnaire-web/src/routes/: question.rs
ch05/questionnaire-web/src/types/: pagination.rs
ch06/questionnaire-web/: Cargo.toml
ch06/questionnaire-web-01-log/: log4rs.yaml  stderr-structured.log.json
ch06/questionnaire-web-01-log/src/: store.rs
ch06/questionnaire-web-02-trace/: Cargo.toml
ch06/questionnaire-web-02-trace/src/: main.rs  store.rs
ch06/questionnaire-web/handle-errors/: Cargo.toml
ch06/questionnaire-web/src/: main.rs
ch07/docker-entrypoint-initdb.d/: init-db-rustwebdev.sh
ch07/questionnaire-web/: Cargo.toml  logs.txt
ch07/questionnaire-web-01-sql-scripts/: log4rs-structured.yaml  questions.json
ch07/questionnaire-web-01-sql-scripts/handle-errors/: Cargo.toml
ch07/questionnaire-web-02-sql-migrations/: Cargo.toml
(+28 files in other folders)
