[package]
name = "questionnaire-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.*", features = ["full"] }
warp = { version = "0.3.*" }
serde = { version = "1.0.*", features = ["derive"] }
