[package]
name = "questionnaire-web"
version = "0.1.0"
rust-version = "1.67"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.*", features = ["full"] }
warp = { version = "0.3.*" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
handle_errors = { path = "handle-errors" }
