[package]
name = "handle_errors"
version = "0.1.0"
rust-version = "1.67"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mod.rs"
doc = true

[dependencies]
warp = { version = "0.3.*" }
sqlx = { version = "0.6.*" }
tracing = { version = "0.1.*", features = ["log"] }
